all summaries updated

--- a/final_autism.ipynb
+++ b/final_autism.ipynb
@@ -1810,6 +1810,7 @@
     "<div class=\"alert alert-block alert-success\">\n",
     "<b>Jaundice vs Asd Traits :</b> \n",
     "<br>-  Males display higher levels of jaundice than females  \n",
+    "<br>-  This was very interesting because I was not expecting this outcome since jaundice is a common condition in newborns.    \n",
     "</div> "
    ]
   },
@@ -3043,6 +3044,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Acquire an Prep Summary :</b> \n",
+    "<br>- The same steps to acquire and prep the data were performed on the second iteration. </div> "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -3649,17 +3659,27 @@
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
     "<b>Conclusion :</b> \n",
-    "<br>- Baseline accuracy: <b> 72.4% </b>(the score we want to beat with our model) \n",
-    "<br>- Accuracy of tested MVP KNN model was <b> 85% </b> \n",
-    "<br>- Accurary of tested 2nd interation with feature engineering was <b> 88% </b></div> "
+    "<br><b> Why does this matter?</b>\n",
+    "<br>- Early intervention.  If we can more accurately identifity toddlers that display autistic traits, then we can alert parents to seek professional medical services for their children sooner.   \n",
+    "<br>- The earlier the intervention, the earlier the child can begin their journey to recovery.</div> "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Next Steps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<b>Next Steps:</b> \n",
+    "<br><b> More data</b>\n",
+    "<br>- Access to scores on assessment tests, sleep, diet, etc.  By having access to additional data we can begin to identify higher risk/more intensive forms of autism.</div> "
+   ]
   }
  ],
  "metadata": {
