fixed spelling erros in readme

--- a/final_autism.ipynb
+++ b/final_autism.ipynb
@@ -3661,7 +3661,8 @@
     "<b>Conclusion :</b> \n",
     "<br><b> Why does this matter?</b>\n",
     "<br>- Early intervention.  If we can more accurately identifity toddlers that display autistic traits, then we can alert parents to seek professional medical services for their children sooner.   \n",
-    "<br>- The earlier the intervention, the earlier the child can begin their journey to recovery.</div> "
+    "<br>- The earlier the intervention, the earlier the child can begin their journey to recovery.\n",
+    "<br>- \"Early interventions not only give children the best start possible, but also the best chance of developing to their full potential\" - Doreen Granpreesheh</div> "
    ]
   },
   {
